...
import 'package:bottom_navy_bar/bottom_navy_bar.dart';
import 'package:plannusandroidversion/services/database.dart';
import 'package:plannusandroidversion/shared/loading.dart';
import 'package:provider/provider.dart';

class Home extends StatefulWidget {
  Home({Key key, this.title}) : super(key: key);
  final String title;
  @override
  _HomeState createState() => _HomeState();
}

class _HomeState extends State<Home> {
...
            backgroundColor: Colors.black54,
            elevation: 0.0,
            actions: <Widget>[
              Container(
                margin: EdgeInsets.only(top: 1.5),
                child: IconButton(
                  icon: Icon(Icons.add, color: Colors.white, key: Key('Add timetable'),),
                  tooltip: 'Add',
                  onPressed: () {
                    showDialog(
                      barrierDismissible: false,
                      context: context,
                      builder: (BuildContext context) {
                        return Dialog(
...
//                  );
//                }),
              FlatButton.icon(
                  icon: Icon(Icons.person,
                    color: Colors.yellow,
                  ),
                  label: Text('logout',
                      style: TextStyle(color: Colors.yellow)
                  ),
                  onPressed: () async {
                    Constants.resetAll();
                    await auth.googleSignIn.isSignedIn().then((value) async {
                      if (value) {
...
                icon: Icon(Icons.apps),
                title: Text('Home', style: GoogleFonts.openSans(),),
                activeColor: Colors.red,
                textAlign: TextAlign.center,
              ),
              BottomNavyBarItem(
                icon: Icon(Icons.calendar_today, key: Key('Timetable-form'),),
                title: Text('Timetable', style: GoogleFonts.openSans() ),
                activeColor: Colors.purpleAccent,
                textAlign: TextAlign.center,
              ),
              BottomNavyBarItem(
                icon: Icon(Icons.message),
                title: Text('Messages', style: GoogleFonts.openSans()
                ),
                activeColor: Colors.pink,
                textAlign: TextAlign.center,
              ),
              BottomNavyBarItem(
                icon: Icon(Icons.perm_identity, key: Key('Profile-form'),),
                title: Text('Profile', style: GoogleFonts.openSans()),
                activeColor: Colors.blue,
                textAlign: TextAlign.center,
              ),
            ],
          ),
...
