...
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: <Widget>[
            Padding(
              padding: EdgeInsets.fromLTRB(30, 8, 30, 8),
              child: TextFormField(
                key: Key("Activity"),
                decoration: InputDecoration(
                    hintText: 'What activity is it?'),
//                : "What activity is it?",
                controller: _selectedName,
              )
            ),
            Text("Start"),
            SizedBox(height: 8.0),
            Container(
              padding: EdgeInsets.fromLTRB(15, 5, 15, 5),
              decoration: ShapeDecoration(
                shape: RoundedRectangleBorder(
                  borderRadius: BorderRadius.circular(15),
...
                  });
                  print(_selectedStartTime.hour);
                },
              ),
            ),
            SizedBox(height: 8.0),
            Text("End"),
            SizedBox(height: 8.0),
            Container(
              padding: EdgeInsets.fromLTRB(15, 5, 15, 5),
              decoration: ShapeDecoration(
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(15),
...
                            .whenComplete(() => Navigator.pop(context));
                      }
                    },
                  ),
                  SizedBox(width: 20.0),
                  RaisedButton(
                      child: Text("Cancel"),
                      onPressed: () {
                        Navigator.pop(context);
                      }
                  ),
                ]
            ),
...
